Amend devise to use `login` attribute
This replaces the supplying of email
address and enables either an email or username
to be supplied for authentication.

Also enforces a downcasing of the username attribute

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -61,6 +61,7 @@ Metrics/BlockLength:
   Exclude:
     - spec/**/*.rb
     - config/routes.rb
+    - config/initializers/devise.rb
 
 Metrics/MethodLength:
   Max: 15
