--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,10 +29,22 @@ Capybara/FeatureMethods:
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
 
+Layout/EmptyLinesAroundAttributeAccessor:
+    Enabled: true
+
 Layout/LineLength:
   Max: 110
   IgnoredPatterns: ['(\A|\s)#','.*\s+ # .*', "body: '{\".*\":", "%r{http.*"]
   AllowHeredoc: true
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Lint/DeprecatedOpenSSLConstant:
+  Enabled: true
+
+Lint/MixedRegexpCaptureTypes:
+  Enabled: true
 
 Lint/RaiseException:
   Enabled: true
@@ -83,6 +95,9 @@ RSpec/NestedGroups:
 Style/Documentation:
   Enabled: false
 
+Style/ExponentialNotation:
+  Enabled: true
+
 Style/FormatStringToken:
   Exclude:
     - app/models/search.rb
@@ -100,5 +115,14 @@ Style/ClassAndModuleChildren:
   Exclude:
     - app/controllers/users/*controller.rb
 
+Style/RedundantRegexpCharacterClass:
+  Enabled: true
+
+Style/RedundantRegexpEscape:
+  Enabled: true
+
 Style/RegexpLiteral:
   EnforcedStyle: slashes
+
+Style/SlicingWithRange:
+  Enabled: true
