--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -118,6 +118,7 @@ ignore_unused:
 - unauthorized.*
 - date.formats.*
 - activemodel.errors.models.*
+- activerecord.errors.models.*
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
