--- a/.k8s/uat/deployment.yaml
+++ b/.k8s/uat/deployment.yaml
@@ -60,7 +60,7 @@ spec:
             - name: RAILS_SERVE_STATIC_FILES
               value: enabled
             - name: GA_TRACKING_ID
-              value: 'UA-WAITING-TOCREATE'
+              value: 'UA-131160087-17'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
