--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "resolutions": {
+    "dot-prop": "^5.2.0",
     "minimist": "^1.2.2",
     "kind-of": "^6.0.3"
   },
